--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 h1 {
     display: inline-block;
     padding: 10px;
+    font-family: Righteous, Verdana, Tahoma, sans-serif;
     font-size: 50px;
     background-color: #eff5;
 }
