--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #0077e7;
     background-image: linear-gradient(cyan, #0077e7);
     background-attachment: fixed;
-    font-family: Silkscreen, Verdana, Tahoma, sans-serif;
+    font-family: Verdana, Tahoma, sans-serif;
     font-size: 17px;
 }
 
