Add responsive snail shell
On a mobile device, the spiral and outline of the snail shell were hard to notice.  Now, they will be more distinct on mobile devices and more delicate on large screens.

--- a/style.css
+++ b/style.css
@@ -89,6 +89,9 @@ button, input:not([type="color"]):not([type="checkbox"]), .hidden, .box {
     h1 {
         font-size: 27pt;
     }
+    .snail_shell {
+        stroke-width: 3px;
+    }
     #notice {
         font-size: 20pt;
     }
